<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp"
    app:cardBackgroundColor="@color/grey"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/idTVScholarship"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/image"
            android:scaleType="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idTVScholarshipType"
            android:layout_below="@id/idTVScholarship"
            android:textColor="@color/yellow"
            android:text="@string/scholarship_categories"
            android:textStyle="bold"
            android:textSize="18sp"
            android:padding="3dp"
            android:maxLines="2"
            android:layout_margin="3dp"
            />

        <TextView
            android:id="@+id/idTVSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idTVScholarship"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:maxLines="3"
            android:padding="10dp"
            android:text="@string/sub_heading"
            android:textColor="@color/white" />

    </RelativeLayout>



</androidx.cardview.widget.CardView>